tests/baselines/reference/parserPostfixPostfixExpression1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Expressions/parserPostfixPostfixExpression1.ts (4 errors) ====
    a++ ++;
        ~~
!!! error TS1005: ';' expected.
          ~
!!! error TS1109: Expression expected.
    ~
!!! error TS2304: Cannot find name 'a'.
          
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.